--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+
+    font-family: "Roboto", sans-serif;
 }
 
 body {
@@ -11,7 +13,35 @@ body {
 }
 
 .header {
+    flex: 0 0 100px;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    padding: 10px 150px;
+
     background-color: #1F2937;
+    color: white;
+    font-weight: 600;
+    font-size: 20px;
+    
+}
+
+.header .logo {
+    font-size: 25px;
+}
+
+.header-links ul{
+    display: flex;
+    gap: 30px;
+    list-style-type: none;
+}
+
+.header-links ul a {
+    text-decoration: none;
+    color: white;
+    font-weight: 400;
 }
 
 .hero {
