--- a/style.css
+++ b/style.css
@@ -22,14 +22,12 @@ body {
     padding: 10px 150px;
 
     background-color: #1F2937;
-    color: white;
-    font-weight: 600;
-    font-size: 20px;
-    
 }
 
 .header .logo {
-    font-size: 25px;
+    font-size: 24px;
+    font-weight: 450;
+    color: #F9FAF8;
 }
 
 .header-links ul{
@@ -40,12 +38,99 @@ body {
 
 .header-links ul a {
     text-decoration: none;
-    color: white;
-    font-weight: 400;
+    font-size: 18px;
+    color: #E5E7EB;
 }
 
 .hero {
+    flex: 0 0 400px;
+
+    display: flex;
+    justify-content: space-between;
+    gap: 150px;
+    
+    padding: 100px 150px;
+
     background-color: #1F2937;
+}
+
+.hero .content {
+    padding-top: 50px;
+    display: flex; 
+
+    flex-direction: column;
+}
+
+.hero .main-text {
+    font-size: 48px;
+    font-weight: 900;
+    color: #F9FAF8;
+
+    margin-bottom: 20px;
+}
+
+.hero .secondary-text{
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+.hero button {
+    background-color: #3882F6;
+    color: #E5E7EB;
+    font-weight: 700;
+
+    margin-top: 30px;
+    margin-bottom: 10px;
+    padding: 10px 20px;
+    width: 120px;
+
+}
+
+
+.hero img {
+    height: 500px;
+    width: auto;
+    border-radius: 10px;
+}
+
+.information {
+    flex: 0 0 600px;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.information .information-header {
+    font-size: 36px;
+    font-weight: 900;
+    color: #1F2937;
+
+    margin-top: 30px;
+}
+
+.information-boxes {
+    margin-top: 50px;
+    display: flex;
+    align-items: center;
+    gap: 50px;
+}
+
+.information-boxes .box{
+    display: flex;
+    flex-direction: column;
+    width: 200px;
+    height: 200px;
+    text-align: center;
+}
+
+.information-boxes img {
+    padding: 30px;
+    border: 4px solid #3882F6;
+    border-radius: 10px;
+    width: 200x;
+    height: 200px;
+    margin-bottom: 30px;
 }
 
 .footer {
