feat: complete footer and attributions

--- a/style.css
+++ b/style.css
@@ -204,5 +204,11 @@ body {
 }
 
 .footer {
+    flex: 0 0 100px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
     background-color: #1F2937;
 }
